Restructure example files and add new examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,14 +7,13 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+find_package(fmt REQUIRED)
+
 add_subdirectory(lib/dtl-modern)
 
-add_library(example-common STATIC common.cpp)
-target_compile_options(example-common PRIVATE -Wall -Wextra -Wconversion)
-
-function(make_exe NAME)
-  add_executable(${NAME} ${NAME}.cpp)
-  target_link_libraries(${NAME} PRIVATE example-common dtl-modern)
+function(make_exe DIR NAME)
+  add_executable(${NAME} source/${DIR}/${NAME}.cpp)
+  target_link_libraries(${NAME} PRIVATE dtl-modern fmt::fmt)
   target_compile_options(${NAME} PRIVATE -Wall -Wextra -Wconversion)
 
   # sanitizer
@@ -22,15 +21,18 @@ function(make_exe NAME)
   target_link_options(${NAME} PRIVATE -fsanitize=address,leak,undefined)
 endfunction()
 
-make_exe(bdiff)
-make_exe(fpatch)
-make_exe(intdiff3)
-make_exe(intdiff)
-make_exe(patch)
-make_exe(st2ses)
-make_exe(strdiff3)
-make_exe(strdiff_cp)
-make_exe(strdiff)
-make_exe(strdiff_storage)
-make_exe(unidiff)
-make_exe(unistrdiff)
+make_exe(old bdiff)
+make_exe(old fpatch)
+make_exe(old intdiff3)
+make_exe(old intdiff)
+make_exe(old patch)
+make_exe(old st2ses)
+make_exe(old strdiff3)
+make_exe(old strdiff_cp)
+make_exe(old strdiff)
+make_exe(old strdiff_storage)
+make_exe(old unidiff)
+make_exe(old unistrdiff)
+
+make_exe(new intdiff_modern)
+make_exe(new strdiff_modern)
